# ft_irc_finish

./: .gitignore  CMakeLists.txt  Channel.cpp  Channel.hpp  Commands.cpp  Commands.hpp  Makefile  Message.cpp  Message.hpp  Server.cpp  Server.hpp  User.cpp  User.hpp  Utils.cpp  Utils.hpp  main.cpp  numeric_replies.hpp  send_reply.cpp
Bot/: Client.hpp  Makefile  main.cpp
Bot/src/: Client.cpp  Client.hpp
commands/: channel_commands.cpp  init_commands.cpp  irc_operatror_commands.cpp  other_commands.cpp  registration_commands.cpp  user_commands.cpp
conf/: conf.conf
src/: Message.cpp  Server.cpp  Server.hpp  User.cpp  Utils.hpp  channel_commands.cpp  irc_operatror_commands.cpp  main.cpp  numeric_replies.hpp  other_commands.cpp  send_error.cpp  user_commands.cpp
